# kaggle-competitions

./: .gitignore  .mise.toml  pyproject.toml
mlflow/: Dockerfile.mlflow  docker-compose.yml
projects/digit-recognizer/: digit-recognizer-mlflow.ipynb
